feat: complete payment
