# src/apps/views/forms.go
@@ -93,3 +93,13 @@ type ImpactPointForm struct {
 type KYBVerificationForm struct {
 	Documents []string `json:"documents"`
 }
+
+type AddWalletForm struct {
+	Chain   string  `json:"chain" form:"chain"`
+	ChainID *string `json:"chain_id" form:"chain_id"`
+	Address string  `json:"address" form:"address"`
+}
+
+type AddCardForm struct {
+	Token string `json:"token" form:"token"`
+}
